--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="zoomment" content="65e5027029aeb252fcaae656" />
   <title>
-    {%- unless page.layout == "home" -%} {{ page.title | append: " | "}} {%- endunless -%} {{
-    site.title }}
+    Tigran Simonyan | Home
   </title>
-
-  {% seo title=false %}
-
-  <!-- {% include favicons.html %} -->
 
   <!-- jsDelivr CDN -->
   <link rel="preconnect" href="cdn.jsdelivr.net" />
