--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,6 +56,10 @@ layout: page
         </li>
       </ul>
 
+      <iframe title="Pixelfed Profile Embed" src="https://analog.am/tigran/embed" class="pixelfed__embed"
+        style="max-width: 100%; border: 0" width="400" height="600" allowfullscreen="allowfullscreen"></iframe>
+      <script async defer src="https://analog.am/embed.js"></script>
+
     </div>
   </div>
 
