--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,6 +33,9 @@ layout: page
       <h6>My projects:</h6>
       <ul style="line-height: 30px;">
         <li>
+          <a href="https://outage.am" target="_blank">https://outage.am</a>
+        </li>
+        <li>
           <a href="https://joinrave.com" target="_blank">https://joinrave.com</a>
         </li>
         <li>
