--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,22 +2,25 @@
 layout: page
 ---
 
-<div class="py-5">
-  <div class="row justify-content-center">
-    <div class="col-sm-12 col-md-7 col-lg-6 col-xl-5 ">
-
+<div class="home-page">
+  <div class="row">
+    <div class="col-md-4">
+      <img src="/uploads/photo.jpg" alt="Tigran Simonyan">
+      <div class="avatar-author">photo by Gaga</div>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-7">
       <div class="about-me">
         Hi there!
         <br /><br />
-        I'm a researcher, programmer, film photographer, and open-source contributor living in Armenia. Balancing life
+        I'm a researcher, programmer, film photographer, and open-source contributor living in Armenia. Balancing
+        life
         between the analog charm of film photography and the digital world of computers.
         <br /><br />
         As someone who values freedom of speech, I prefer to avoid using pop platforms that are controlled by large
-        corporations and instead opt for more independent options such as Mastodon, XMPP, WriteFreely, Pixelfed, etc.
+        corporations and instead opt for more independent options such as Mastodon, XMPP, WriteFreely, Pixelfed,
+        etc.
         <br /><br />
-        Thanks for stopping by!
-        <br /><br /><br />
-
       </div>
 
       <h6>Social links:</h6>
@@ -49,6 +52,20 @@ layout: page
         </li>
       </ul>
 
+      <h6>Work experience:</h6>
+      <ul style="line-height: 30px;">
+        <li>
+          <i>2023 - present:</i> Senior Frontend Developer at <a href="https://hostaway.com"
+            target="_blank">Hostaway</a>
+        </li>
+        <li>
+          <i>2017 - 2023:</i> CTO at <a href="https://name.am" target="_blank">Name.am</a>
+        </li>
+        <li>
+          <i>2015 - 2017:</i> Frontend Developer at <a href="https://www.ucraft.com" target="_blank">Ucraft</a>
+        </li>
+      </ul>
+
       <h6>Contacts:</h6>
       <ul>
         <li>
@@ -58,12 +75,6 @@ layout: page
           xmpp: tigran@jabber.def.am
         </li>
       </ul>
-
-      <iframe title="Pixelfed Profile Embed" src="https://analog.am/tigran/embed" class="pixelfed__embed"
-        style="max-width: 100%; border: 0" width="400" height="600" allowfullscreen="allowfullscreen"></iframe>
-      <script async defer src="https://analog.am/embed.js"></script>
-
     </div>
   </div>
-
 </div>
