added gift ideas

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,6 +52,14 @@ layout: page
         </li>
       </ul>
 
+      <h6>Gift ideas:</h6>
+      <ul style="line-height: 30px;">
+        <li>
+          <a href="https://www.amazon.com/hz/wishlist/ls/2CRTQH1CXKYBJ?ref_=wl_share" target="_blank">My Favorites on
+            Amazon</a>
+        </li>
+      </ul>
+
       <h6>Contacts:</h6>
       <ul>
         <li>
