--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,8 +55,9 @@ layout: page
       <h6>Gift ideas:</h6>
       <ul style="line-height: 30px;">
         <li>
-          <a href="https://www.amazon.com/hz/wishlist/ls/2CRTQH1CXKYBJ?ref_=wl_share" target="_blank">My Favorites on
-            Amazon</a>
+          <a href="https://www.amazon.com/hz/wishlist/ls/2CRTQH1CXKYBJ?ref_=wl_share&viewType=grid" target="_blank">My
+            amazon
+            wishlist</a>
         </li>
       </ul>
 
